# screenrec-converter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
packaging/: screenrec-converter.desktop  screenrec-converter.service
screenrec_converter/: __init__.py  main.py
screenrec_converter/config/: __init__.py  settings.py
screenrec_converter/converter/: __init__.py  naming.py  pipeline.py  presets.py
screenrec_converter/encoder/: __init__.py  detect.py
screenrec_converter/gui/: settings_window.py
screenrec_converter/logger/: __init__.py  setup.py
screenrec_converter/notifications/: __init__.py  notify.py
screenrec_converter/plugins/: __init__.py  base.py  loader.py
screenrec_converter/tray/: tray_app.py
screenrec_converter/utils/: __init__.py  files.py
screenrec_converter/watcher/: __init__.py  monitor.py
tests/: conftest.py  test_config.py  test_naming.py  test_pipeline.py  test_plugins.py  test_presets.py  test_stability.py  test_utils.py  test_watcher.py
