[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "screenrec-converter"
version = "0.1.0"
description = "Automatically convert GNOME screen recordings from WebM to MP4"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "watchdog>=4.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
dev = ["pytest>=8.0"]

[project.scripts]
screenrec-converter = "screenrec_converter.main:main"

[tool.setuptools.packages.find]
include = ["screenrec_converter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
